# UnitWorld

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  imgui.ini
Assets/: AppConfig.json
Assets/Shaders/Source/: test.vert  test.vert.spv
Docs/: rendergraph.drawio
Editor/: CMakeLists.txt
Editor/Source/: EditorLayer.cpp  EditorLayer.hpp  main.cpp
Editor/Source/Panels/: EntityPropsPanel.cpp  EntityPropsPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
Vega/: CMakeLists.txt
Vega/Source/Platform/: Platform.hpp
Vega/Source/Platform/Desktop/Core/: GLFWInputs.cpp  GLFWWindow.cpp  GLFWWindow.hpp
Vega/Source/Platform/OpenGL/Core/: GLFWWindow.cpp  GLFWWindow.hpp
Vega/Source/Platform/OpenGL/ImGui/: OGLImGuiImpl.cpp  OGLImGuiImpl.hpp  OpenGlImGuiImpl.cpp  OpenGlImGuiImpl.hpp
Vega/Source/Platform/OpenGL/Renderer/: OGLRendererBackend.cpp  OGLRendererBackend.hpp  OpenGlRendererBackend.cpp  OpenGlRendererBackend.hpp  OpenGlShader.cpp  OpenGlShader.hpp
Vega/Source/Platform/Vulkan/ImGui/: VkImGuiImpl.cpp  VkImGuiImpl.hpp
Vega/Source/Platform/Vulkan/Platform/: VkPlatform.hpp  VkPlatformWindows.cpp
Vega/Source/Platform/Vulkan/Renderer/: VkBase.hpp  VkDeviceWrapper.cpp  VkDeviceWrapper.hpp  VkRendererBackend.cpp  VkRendererBackend.hpp  VkSwapchain.cpp  VkSwapchain.hpp
Vega/Source/Platform/Vulkan/Utils/: VkUtils.cpp  VkUtils.hpp
Vega/Source/Platform/Windows/Plugins/: WinPluginLibrary.cpp
Vega/Source/Vega/Assets/: AssetBase.hpp
Vega/Source/Vega/Core/: Application.cpp  Application.hpp  Assert.hpp  Base.hpp  EntryPoint.hpp  Inputs.hpp  KeyCodes.hpp  MouseCodes.hpp  Window.cpp  Window.hpp
Vega/Source/Vega/Events/: Event.hpp  EventHandler.hpp  EventManager.cpp  EventManager.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Vega/Source/Vega/ImGui/: ImGuiImpl.cpp  ImGuiImpl.hpp
Vega/Source/Vega/ImGui/Fonts/: ImGuiFontDefinesIconsFA.inl  ImGuiFontDefinesIconsFABrands.inl  ImGuiFonts.hpp  LICENSE.txt
Vega/Source/Vega/Layers/: GuiLayer.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
Vega/Source/Vega/Managers/: Manager.cpp  Manager.hpp  StaticMeshManager.cpp  StaticMeshManager.hpp
Vega/Source/Vega/Plugins/: PluginLibrary.cpp  PluginLibrary.hpp
Vega/Source/Vega/Renderer/: FrameBuffer.cpp  FrameBuffer.hpp  RenderBuffer.cpp  RenderBuffer.hpp  RenderBufferAllocator.cpp  RenderBufferAllocator.hpp  RendererBackend.cpp  RendererBackend.hpp  RendererBackendApi.hpp  RendererBackendTypes.hpp  Shader.cpp  Shader.hpp  Texture.hpp
Vega/Source/Vega/Scene/: Scene.cpp  Scene.hpp
Vega/Source/Vega/Scene/Components/: HierarchyComponent.hpp  NameComponent.hpp  StaticMeshComponent.hpp  TransformComponent.hpp
Vega/Source/Vega/Scene/Systems/: SceneSystem.hpp  SceneSystemStaticMeshDraw.cpp  SceneSystemStaticMeshDraw.hpp
Vega/Source/Vega/Utils/: Log.cpp  Log.hpp  Logger.cpp  Logger.hpp  PluginData.cpp  PluginData.hpp  magic_enum.hpp  utf8.hpp
VegaPlugins/VegaVulkanRenderer/: CMakeLists.txt  VegaVulkanPlugin.cpp  VegaVulkanPlugin.hpp
VegaPlugins/VegaVulkanRenderer/ImGui/: VulkanImGuiBackend.cpp  VulkanImGuiImpl.cpp  VulkanImGuiImpl.hpp
VegaPlugins/VegaVulkanRenderer/Platform/: VulkanPlatform.hpp  VulkanPlatformWindows.cpp
VegaPlugins/VegaVulkanRenderer/Renderer/: VulkanBase.hpp  VulkanDeviceWrapper.cpp  VulkanDeviceWrapper.hpp  VulkanFrameBuffer.cpp  VulkanFrameBuffer.hpp  VulkanRenderBuffer.cpp  VulkanRenderBuffer.hpp  VulkanRendererBackend.cpp  VulkanRendererBackend.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTexture.cpp  VulkanTexture.hpp
VegaPlugins/VegaVulkanRenderer/Utils/: VulkanUtils.cpp  VulkanUtils.hpp
